work on patchwork section

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>TAKE</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="img/development.png">
-  <title></title>
+  <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 
 <body>
@@ -19,85 +18,98 @@
         <img src="img/logo.png" alt="">
       </a>
     </div>
-    <div class="title container">
-      <h1>Picture perfect</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <div class="container title text-white" id="titlepic">
+      <h1 id="picperf">Picture perfect</h1>
+      <p id="pictext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br> tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
   </header>
 
   <section class="projects">
     <article class="container">
-      <h2 class="pt-5 mb-4">Start something new</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <div class="container px-lg-5">
+        <h2 class="pt-5 mb-4">Start something new</h2>
+        <div style="font-size:14px;" class="row mx-lg-n5">
+          <div class="col py-3 px-lg-5">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis
+              unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+            <p>eaque ipsa quae ab illo inventore veritatis et beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.</p>
+          </div>
+          <div class="col py-3 px-lg-5">
+            <img src="img/ipone.png" alt="ipone" id="ipone">
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+          </div>
+        </div>
+      </div>
     </article>
+  </section>
 
     <!--harmo : side-by-side gallery-->
-    <article class="patchwork">
-      <div class="container-fluid row w-75 ml-5">
+  <section class="pt-5 pl-5 pr-5">
+    <article class="patchwork text-light">
+      <div id="cards-right" class="row">
         <div class="line1 row">
-          <div class="design col-md-3">
+          <div class="design col-md-3 p-3">
             <h3>Design</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <button type="button" class="btn btn-primary btn-sm">Find Out More</button>
+            <button type="button" class="btn btn-primary custom-btn btn-sm">Find Out More &rarr;</button>
           </div>
-          <div class="built col-md-3">
+          <div class="built col-md-3 p-3">
             <h3>Built to last</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <button type="button" class="btn btn-primary btn-sm">Find Out More</button>
+            <button type="button" class="btn btn-primary custom-btn btn-sm">Find Out More &rarr;</button>
           </div>
-          <div class="clients col-md-3">
+          <div class="clients col-md-3 p-3">
             <h3>Our clients</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <button type="button" class="btn btn-primary btn-sm">Find Out More</button>
+            <button type="button" class="btn btn-primary custom-btn btn-sm">Find Out More &rarr;</button>
           </div>
-          <div class="great col-md-3">
+          <div class="great col-md-3 p-3">
             <h3>How to shoow great</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <button type="button" class="btn btn-primary btn-sm">Find Out More</button>
+            <button type="button" class="btn btn-primary custom-btn btn-sm">Find Out More &rarr;</button>
           </div>
         </div>
         <div class="line2 row">
-          <div class="sign_up col-md-6">
+          <div class="sign_up col-md-6 p-3">
             <h3>Sign up & see why</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <button type="button" class="btn btn-primary btn-sm">Find Out More</button>
+            <button type="button" class="btn btn-primary custom-btn btn-sm">Find Out More &rarr;</button>
           </div>
-          <div class="pictures col-md-3">
+          <div class="pictures col-md-3 p-3">
             <h3>Perfect pictures</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <button type="button" class="btn btn-primary btn-sm">Find Out More</button>
+            <button type="button" class="btn btn-primary custom-btn btn-sm">Find Out More &rarr;</button>
           </div>
-          <div class="something_new col-md-3">
+          <div class="something_new col-md-3 p-3">
             <h3>Start something new</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <button type="button" class="btn btn-primary btn-sm">Find Out More</button>
+            <button type="button" class="btn btn-primary custom-btn btn-sm">Find Out More &rarr;</button>
           </div>
         </div>
       </div>
     </article>
 
-    <article class="details container">
+    <article class="details container p-5">
       <h2>A look at details</h2>
       <div class="small_articles row">
         <aside class="web col-md-3">
           <h4>Web based</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </aside>
         <aside class="performance col-md-3">
           <h4>Web based</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </aside>
         <aside class="cultural col-md-3">
           <h4>Web based</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </aside>
         <aside class="sustainability col-md-3">
           <h4>Web based</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </aside>
       </div>
     </article>
@@ -107,8 +119,28 @@
 
   </section>
   <section class="products">
-
+    <div class="row">
+      <div class="col-lg-6 col-sm-6 col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Go it solo</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+            <a href="#" class="btn btn-primary">Buy now $18</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-sm-6 col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Team Plan</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+            <a href="#" class="btn btn-primary">Buy now $18</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
+  <!--FOOTER -->
   <footer class="end">
 
   </footer>
