Third day of work with Antoni Salomon.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="img/logo.png">
+  <!--googlefont-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -46,7 +48,7 @@
     </article>
   </section>
 
-    <!--harmo : side-by-side gallery-->
+  <!--harmo : side-by-side gallery-->
   <section class="pt-5 pl-5 pr-5">
     <article class="patchwork text-light">
       <div id="cards-right" class="row">
@@ -97,27 +99,57 @@
       <div class="small_articles row">
         <aside class="web col-md-3">
           <h4>Web based</h4>
-          <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat.</p>
         </aside>
         <aside class="performance col-md-3">
-          <h4>Web based</h4>
-          <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h4>Performance</h4>
+          <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat.</p>
         </aside>
         <aside class="cultural col-md-3">
-          <h4>Web based</h4>
-          <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h4>Cultural</h4>
+          <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat.</p>
         </aside>
         <aside class="sustainability col-md-3">
-          <h4>Web based</h4>
-          <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h4>Sustainability</h4>
+          <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat.</p>
         </aside>
       </div>
     </article>
-
   </section>
-  <section class="second-box min vh-100">
 
+  <section class="second-box">
+    <article class="container presentation align-middle min-vh-100">
+      <h2 class="text-white">More power behind every pixel.</h2>
+      <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.</p>
+      <button type="button" class="btn btn-primary custom-btn btn-sm">Find Out More &rarr;</button>
+    </article>
   </section>
+
+  <section class="information">
+    <article class="reasons container">
+      <h3 class="text-white pt-5 pb-4">Reasons to get onbaord</h3>
+      <div class="row d-flex align-items-end">
+        <aside class="web_based col-md-4 text-white pt-4 pb-4">
+          <h4>Web based</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </aside>
+        <aside class="team col-md-4 text-white pt-4 pb-4">
+          <h4>Team login</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </aside>
+        <aside class="support col-md-4 text-white pt-4 pb-4">
+          <h4>Great support</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </aside>
+      </div>
+    </article>
+  </section>
+
   <section class="products">
     <div class="row">
       <div class="col-lg-6 col-sm-6 col-sm-6">
@@ -142,6 +174,72 @@
   </section>
   <!--FOOTER -->
   <footer class="end">
+    <div class="blabla container">
+      <div class="row d-flex align-items-center">
+        <div class="left col-md-6">
+          <div class="get_in_touch text-white">
+            <h4>Get in touch</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="us row">
+            <aside class="resources text-white col-md-4">
+              <h5>Resources</h5>
+              <div class="contents">
+                <a href="#" class="text-white">Tour</a>
+                <a href="#" class="text-white">Customers</a>
+                <a href="#" class="text-white">Pricing and Plans</a>
+                <a href="#" class="text-white">New Features</a>
+                <a href="#" class="text-white">Education</a>
+              </div>
+
+            </aside>
+            <aside class="features text-white col-md-4">
+              <h5>Features</h5>
+              <div class="contents">
+                <a href="#" class="text-white">Tour</a>
+                <a href="#" class="text-white">Customers</a>
+                <a href="#" class="text-white">Pricing and Plans</a>
+                <a href="#" class="text-white">New Features</a>
+                <a href="#" class="text-white">Education</a>
+              </div>
+            </aside>
+            <aside class="how_to text-white col-md-4">
+              <h5>How To's</h5>
+              <div class="contents">
+                <a href="#" class="text-white">Tour</a>
+                <a href="#" class="text-white">Customers</a>
+                <a href="#" class="text-white">Pricing and Plans</a>
+                <a href="#" class="text-white">New Features</a>
+                <a href="#" class="text-white">Education</a>
+              </div>
+            </aside>
+          </div>
+        </div>
+
+        <div class="right col-md-6">
+          <div class="form">
+            <h4 class="text-white">Stay in touch</h4>
+            <div class="input-group">
+              <input type="text" class="form-control form-control-lg" id="validationDefaultUsername" placeholder="Username" aria-describedby="inputGroupPrepend2" required>
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroupPrepend2"><i class="fas fa-check text-white"></i></span>
+              </div>
+            </div>
+            <p class="spam_info text-secondary">We don't send spam. Actually, who are we kiding, we'll spam the shit out of your inbox</p>
+          </div>
+
+          <div class="made_by text-white">
+            <p>Free Template by FreeTemplates.pro</p>
+          </div>
+        </div>
+      </div>
+
+
+
+    </div>
+
+
+  </div>
 
   </footer>
 
