Parallax Effect added on header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <header class="header min vh-100">
+  <header class="header min-vh-100">
     <div class="container logo">
       <a href="#">
         <img src="img/logo.png" alt="">
@@ -241,9 +241,6 @@
       </div>
     </div>
   </footer>
-
-
-
 
   <script src="https://kit.fontawesome.com/6fee70888d.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
