--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@ p          <h2 class="text-white display-4">More power <br> behind every pixel.<
     </article>
   </section>
 
-  <section class="information">
-    <article class="reasons container">
+  <section class="information p-5">
+    <article class="reasons container p-3">
       <h3 class="text-white pt-5 pb-4">Reasons to get onbaord</h3>
       <div class="row d-flex align-items-end">
         <aside class="web_based col-md-4 text-white pt-4 pb-4">
@@ -160,7 +160,7 @@ p          <h2 class="text-white display-4">More power <br> behind every pixel.<
       <div class="row cardsp">
         <div class="col-6">
           <div class="nocolor">
-            <span>Legacy</span>
+            <span class="purple-bg">Legacy</span>
             <h2 class="solo1">Go it solo</h2>
             <p class="solo2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
             <button type="button" id="gbut" class="btn btn-success">Buy now $18</button>
@@ -170,7 +170,7 @@ p          <h2 class="text-white display-4">More power <br> behind every pixel.<
         </div>
         <div class="col-6">
           <div class="nocolor">
-            <span>Most Popular</span>
+            <span class="purple-bg">Most Popular</span>
             <h2 class="solo1">Team Plan</h2>
             <p class="solo2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
             <button type="button" id="gbut" class="btn btn-success">Buy now $18</button>
@@ -231,7 +231,7 @@ p          <h2 class="text-white display-4">More power <br> behind every pixel.<
             <div class="input-group mb-3">
               <input type="text" class="form-control" placeholder="username" aria-label="Recipient's username" aria-describedby="button-addon2">
               <div class="input-group-append">
-                <button class="btn btn-light" type="button" id="button-addon2"><i class="fas fa-check text-white"></i></button>
+                <button class="btn" type="button" id="button-addon2"><i class="fas fa-check text-white"></i></button>
               </div>
             </div>
             <p class="spam_info text-secondary">We don't send spam. Actually, who are we kiding, we'll spam the shit out of your inbox</p>
